baml_language/crates/baml_tests/snapshots/diagnostic_errors/lambda_errors/baml_tests__diagnostic_errors__lambda_errors__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== PPIR ===
function user.test_arity_mismatch() -> int[]  [expr] {
  { let items: int[] = [1, 2, 3] } items.map((x, y) -> { {  } x })
}
function user.test_conflicting_later_constraints() -> int  [expr] {
  { let f = (x) -> { {  } x }; let int_identity: (int) -> int throws never = f; let string_identity: (string) -> string throws never = f } int_identity(0)
}
function user.test_no_annotation_no_context() -> int  [expr] {
  { let bad = (x) -> { {  } x Mul 2 } } 0
}
function user.test_param_type_mismatch() -> int[]  [expr] {
  { let items: int[] = [1, 2, 3] } items.map((x: string) -> { {  } x })
}
function user.test_return_mismatch() -> int  [expr] {
  { let bad = (x: int) -> string { {  } x Mul 2 } } 0
}
function user.test_unknown_param_type() -> int  [expr] {
  { let f = (x: NonExistentType) -> { {  } 0 } } 0
}
function user.test_unknown_return_type() -> int  [expr] {
  { let f = (x: int) -> NonExistentType { {  } x } } 0
}
